--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,7 +88,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.bumpver]
 current_version = "0.2.4"
 version_pattern = "MAJOR.MINOR.PATCH"
-commit_message = "bump version {old_version} -> {new_version}"
+commit_message = "chore: Bump version {old_version} -> {new_version}"
 tag_message = "{new_version}"
 tag_scope = "default"
 pre_commit_hook = ""
