--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,22 @@
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
-    hooks:
+  - hooks:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-added-large-files
       - id: detect-private-key
-  - repo: https://github.com/compilerla/conventional-pre-commit
-    rev: v4.0.0
-    hooks:
-      - id: conventional-pre-commit
-        stages: [commit-msg]
-        args: [] # optional: list of Conventional Commits types to allow e.g. [feat, fix, ci, chore, test]
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: "v0.9.4"
-    hooks:
-      # Run the linter.
+    repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v5.0.0
+
+  - hooks:
       - id: ruff
-      # Run the formatter.
       - id: ruff-format
+    repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.9.4
+
+  - hooks:
+      - id: commitizen
+      - id: commitizen-branch
+        stages:
+          - push
+    repo: https://github.com/commitizen-tools/commitizen
+    rev: v4.1.1
