--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: harbor.infra.garr.it/cache/library/python:3.12
 
 stages:
   - lint
+  - auto-bump
   - publish
 
 before_script:
@@ -18,6 +19,19 @@ lint:
     - poetry run ruff format .
   only:
     - main
+
+auto-bump:
+  stage: auto-bump
+  script:
+    - git config user.email $CI_EMAIL && git config user.name $CI_USERNAME
+    - git config http.sslVerify false
+    - git remote rm origin && git remote add origin https://$CI_USERNAME:$PROJECT_ACCESS_TOKEN@$CI_SERVER_HOST/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME.git
+    - git checkout -B "$CI_COMMIT_REF_NAME" "$CI_COMMIT_SHA"
+    - poetry run cz bump --yes # execute auto bump and push to main
+    - git push --follow-tags origin $CI_COMMIT_BRANCH:$CI_COMMIT_BRANCH
+  rules:
+    # $GITLAB_USER_LOGIN != $CI_USERNAME ensures that this job won't produce an infinite loop by triggering itself when pushing back to the main branch.
+    - if: '$CI_COMMIT_BRANCH == "main" && $GITLAB_USER_LOGIN != $CI_USERNAME && ($CI_PIPELINE_SOURCE == "push" || $CI_PIPELINE_SOURCE == "merge_request_event")'
 
 publish_gitlab:
   stage: publish
