--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,6 @@ before_script:
   - poetry config virtualenvs.create false # Disable virtual environment creation and install dependencies in the system scope
   - poetry install
   - echo "Dependencies installed, building package..."
-  - poetry build
-  - echo "Build done."
 
 lint:
   stage: lint
@@ -28,7 +26,7 @@ auto-bump:
     - git remote rm origin && git remote add origin https://$CI_USERNAME:$PROJECT_ACCESS_TOKEN@$CI_SERVER_HOST/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME.git
     - git checkout -B "$CI_COMMIT_REF_NAME" "$CI_COMMIT_SHA"
     - poetry run cz bump --yes # execute auto bump and push to main
-    - git push -o ci.skip --follow-tags origin $CI_COMMIT_BRANCH:$CI_COMMIT_BRANCH
+    - git push -o ci.skip --tags origin $CI_COMMIT_BRANCH:$CI_COMMIT_BRANCH
   only:
     - main
 
@@ -36,6 +34,7 @@ publish_gitlab:
   stage: publish
   script:
     - poetry config repositories.gitlab ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi
+    - poetry build
     - echo "Repository gitlab configured ..."
     - echo "Publishing package to GitLab Package Registry"
     - poetry publish --repository gitlab -u gitlab-ci-token -p ${CI_JOB_TOKEN} --skip-existing
@@ -48,6 +47,7 @@ publish_pypi:
   script:
     - poetry config pypi-token.pypi ${PYPI_TOKEN}
     - echo "Repository PyPI configured ..."
+    - poetry build
     - echo "Publishing package to PyPI"
     - poetry publish
     - echo "Publishing to PyPI done!"
