ci: build docker image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,3 +55,27 @@ publish_pypi:
     - echo "Publishing to PyPI done!"
   only:
     - main
+
+build_docker_image:
+  stage: publish
+  image: harbor.infra.garr.it/cache/library/docker
+  services:
+    - name: harbor.infra.garr.it/cache/library/docker:dind
+      alias: docker
+  variables:
+    CONTAINER_IMAGE_PATH: $CI_REGISTRY/$CI_PROJECT_PATH
+    IMAGE_NAME: tcs-garr
+  before_script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - export TAG=$(grep -oP '(?<=^version = ").*(?="$)' pyproject.toml)
+  script:
+    - echo "Building $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG"
+    - docker pull $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG || true
+    - >-
+      docker build --cache-from $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG
+      --tag $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG
+      --tag $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest
+      -f ./Dockerfile .
+    - docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG
+    - docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest
+    - echo "Pushed $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG and latest"
