feat: ruff update

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,8 @@ readme = "README.md"
 license = { text = "GPL-3.0-or-later" }
 requires-python = ">=3.9"
 dynamic = ["dependencies", "classifiers"]
-authors = [
-    { name = "Consortium GARR", email = "system.support@garr.it" }
-]
-maintainers = [
-    { name = "Consortium GARR", email = "system.support@garr.it" }
-]
+authors = [{ name = "Consortium GARR", email = "system.support@garr.it" }]
+maintainers = [{ name = "Consortium GARR", email = "system.support@garr.it" }]
 
 [project.urls]
 Documentation = "https://github.com/ConsortiumGARR/tcs-garr/blob/main/README.md"
@@ -34,7 +30,7 @@ pyotp = "^2.9.0"
 jwt = "^1.3.1"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.4.4"
+ruff = "^0.9.7"
 pre-commit = "^3.7.1"
 commitizen = "^4.1.1"
 
@@ -79,9 +75,7 @@ version_scheme = "semver2"
 version_provider = "pep621"
 update_changelog_on_bump = true
 major_version_zero = true
-version_files = [
-    "README.md"
-]
+version_files = ["README.md"]
 
 [build-system]
 requires = ["poetry-core"]
