feat: workaround for merge request pipelines

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
   - lint
   - auto-bump
   - publish
+  - mr-wa
 
 before_script:
   - pip install poetry
@@ -55,3 +56,9 @@ publish_pypi:
     - echo "Publishing to PyPI done!"
   only:
     - main
+
+do_nothing:
+  stage: mr-wa
+  script: echo "Dummy job for merge-request. For info check https://stackoverflow.com/a/73333320"
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
