--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ beautifulsoup4 = "^4.12.3"
 requests = "^2.32.3"
 pyotp = "^2.9.0"
 jwt = "^1.3.1"
+packaging = "^24.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.9.7"
