--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ tcs-garr = "tcs_garr.main:main"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-cryptography = "^42.0.7"
+cryptography = "43.0.1"
 tabulate = "^0.9.0"
 pytz = "^2024.1"
 colorama = "^0.4.6"
