--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,20 +76,33 @@ build_docker_image:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - export TAG=$(grep '^version =' pyproject.toml | sed -E 's/version = "(.*)"/\1/')
   script:
-    - echo "Building $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG"
-    - docker pull $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG || true
-    - >-
-      docker build --cache-from $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG
-      --tag $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG
-      --tag $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest
-      -f ./Dockerfile .
-    - docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG
-    - docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest
-    - echo "Pushed $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG and latest"
+    # Only build when merging request
+    - echo "Building $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest"
+    - docker build --tag $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest -f ./Dockerfile .
+
+    # Build and push latest tag on main branch
+    - |
+      if [[ "$CI_COMMIT_REF_NAME" == "main" ]]; then
+        docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest
+        echo "Pushed $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest"
+      fi
+
+    # Build and push on tag creation
+    - |
+      if [[ "$CI_COMMIT_TAG" != "" ]]; then
+        docker build --tag $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG -f ./Dockerfile .
+        docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG
+        echo "Pushed $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG"
+      fi
   rules:
-    - if: $CI_COMMIT_TAG
-      when: never
-    - if: $CI_COMMIT_REF_NAME == "main" || $CI_PIPELINE_SOURCE == 'merge_request_event'
+    - if: $CI_COMMIT_REF_NAME == "main"
       changes:
         - Dockerfile
         - tcs_garr/*
+        - pyproject.toml
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+      changes:
+        - Dockerfile
+        - tcs_garr/*
+        - pyproject.toml
+    - if: $CI_COMMIT_TAG
