--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,8 +21,8 @@ lint:
   stage: lint
   script:
     - poetry run ruff format .
-  only:
-    - main
+  rules:
+    - if: '$CI_COMMIT_REF_NAME == "main"'
 
 auto-bump-and-build:
   stage: auto-bump-and-build
@@ -50,8 +50,8 @@ publish_gitlab:
     - echo "Publishing package to Gitlab"
     - TWINE_PASSWORD=${CI_JOB_TOKEN} TWINE_USERNAME=gitlab-ci-token python -m twine upload --repository-url ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi dist/*
     - echo "Publishing to GitLab done!"
-  only:
-    - main
+  rules:
+    - if: '$CI_COMMIT_TAG && $CI_COMMIT_REF_NAME == "main"'
 
 do_nothing:
   stage: mr-wa
@@ -67,8 +67,8 @@ publish_pypi:
     - echo "Publishing package to PyPI"
     - TWINE_PASSWORD=${PYPI_TOKEN} TWINE_USERNAME=__token__ python -m twine upload dist/*
     - echo "Publishing to PyPI done!"
-  only:
-    - main
+  rules:
+    - if: '$CI_COMMIT_TAG && $CI_COMMIT_REF_NAME == "main"'
 
 build_docker_image:
   stage: publish
@@ -83,18 +83,15 @@ build_docker_image:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - export TAG=$(grep '^version =' pyproject.toml | sed -E 's/version = "(.*)"/\1/')
   script:
-    # Only build when merging request
     - echo "Building $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest"
     - docker build --tag $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest -f ./Dockerfile .
 
-    # Build and push latest tag on main branch
     - |
       if [[ "$CI_COMMIT_REF_NAME" == "main" ]]; then
         docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest
         echo "Pushed $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest"
       fi
 
-    # Build and push on tag creation
     - |
       if [[ "$CI_COMMIT_TAG" != "" ]]; then
         docker build --tag $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG -f ./Dockerfile .
@@ -118,7 +115,7 @@ release:
   stage: release
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   rules:
-    - if: $CI_COMMIT_TAG
+    - if: '$CI_COMMIT_TAG && $CI_COMMIT_REF_NAME == "main"'
   script:
     - echo "Running the release job for $CI_COMMIT_TAG."
     - "awk '/^## Unreleased/ { next } ; /^## / { r++ ; if ( r <2) { print ; next } else { exit } }; /^/ { print } ;' < CHANGELOG.md >INCREMENTAL_CHANGELOG.md"
