--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,8 +21,8 @@ lint:
   stage: lint
   script:
     - poetry run ruff format .
-  rules:
-    - if: '$CI_COMMIT_REF_NAME == "main"'
+  only:
+    - main
 
 auto-bump-and-build:
   stage: auto-bump-and-build
@@ -51,7 +51,7 @@ publish_gitlab:
     - TWINE_PASSWORD=${CI_JOB_TOKEN} TWINE_USERNAME=gitlab-ci-token python -m twine upload --repository-url ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi dist/*
     - echo "Publishing to GitLab done!"
   rules:
-    - if: '$CI_COMMIT_TAG && $CI_COMMIT_REF_NAME == "main"'
+    - if: "$CI_COMMIT_TAG"
 
 do_nothing:
   stage: mr-wa
@@ -68,7 +68,7 @@ publish_pypi:
     - TWINE_PASSWORD=${PYPI_TOKEN} TWINE_USERNAME=__token__ python -m twine upload dist/*
     - echo "Publishing to PyPI done!"
   rules:
-    - if: '$CI_COMMIT_TAG && $CI_COMMIT_REF_NAME == "main"'
+    - if: "$CI_COMMIT_TAG"
 
 build_docker_image:
   stage: publish
@@ -115,7 +115,7 @@ release:
   stage: release
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   rules:
-    - if: '$CI_COMMIT_TAG && $CI_COMMIT_REF_NAME == "main"'
+    - if: "$CI_COMMIT_TAG"
   script:
     - echo "Running the release job for $CI_COMMIT_TAG."
     - "awk '/^## Unreleased/ { next } ; /^## / { r++ ; if ( r <2) { print ; next } else { exit } }; /^/ { print } ;' < CHANGELOG.md >INCREMENTAL_CHANGELOG.md"
