--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,13 +22,16 @@ lint:
 
 auto-bump-and-build:
   stage: auto-bump-and-build
+  except:
+    variables:
+      - $GITLAB_USER_LOGIN == "$CI_USERNAME"
   script:
     - git config user.email $CI_EMAIL && git config user.name $CI_USERNAME
     - git config http.sslVerify false
     - git remote rm origin && git remote add origin https://$CI_USERNAME:$PROJECT_ACCESS_TOKEN@$CI_SERVER_HOST/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME.git
     - git checkout -B "$CI_COMMIT_REF_NAME" "$CI_COMMIT_SHA"
     - poetry run cz bump --yes || true # execute auto bump, continue even if no bump is necessary
-    - git push -o ci.skip --tags origin $CI_COMMIT_BRANCH:$CI_COMMIT_BRANCH
+    - git push --tags origin $CI_COMMIT_BRANCH:$CI_COMMIT_BRANCH
     - poetry build
   only:
     - main
