--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ publish_gitlab:
     - TWINE_PASSWORD=${CI_JOB_TOKEN} TWINE_USERNAME=gitlab-ci-token python -m twine upload --repository-url ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi dist/*
     - echo "Publishing to GitLab done!"
   rules:
-    - if: "$CI_COMMIT_TAG && $GITLAB_USER_LOGIN == $CI_USERNAME"
+    - if: '$CI_COMMIT_TAG && $CI_PIPELINE_SOURCE == "push"'
 
 do_nothing:
   stage: mr-wa
@@ -66,7 +66,7 @@ publish_pypi:
     - TWINE_PASSWORD=${PYPI_TOKEN} TWINE_USERNAME=__token__ python -m twine upload dist/*
     - echo "Publishing to PyPI done!"
   rules:
-    - if: "$CI_COMMIT_TAG && $GITLAB_USER_LOGIN == $CI_USERNAME"
+    - if: '$CI_COMMIT_TAG && $CI_PIPELINE_SOURCE == "push"'
 
 build_docker_image:
   stage: publish
@@ -116,7 +116,7 @@ release:
   stage: release
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   rules:
-    - if: "$CI_COMMIT_TAG && $GITLAB_USER_LOGIN == $CI_USERNAME"
+    - if: '$CI_COMMIT_TAG && $CI_PIPELINE_SOURCE == "push"'
   script:
     - echo "Running the release job for $CI_COMMIT_TAG."
     - "awk '/^## Unreleased/ { next } ; /^## / { r++ ; if ( r <2) { print ; next } else { exit } }; /^/ { print } ;' < CHANGELOG.md >INCREMENTAL_CHANGELOG.md"
