--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -97,7 +97,8 @@ build_docker_image:
       if [[ "$CI_COMMIT_TAG" != "" ]]; then
         docker build --tag $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG -f ./Dockerfile .
         docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG
-        echo "Pushed $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG"
+        docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest
+        echo "Pushed $CONTAINER_IMAGE_PATH/$IMAGE_NAME with tag: $TAG, latest."
       fi
   rules:
     - if: $CI_COMMIT_REF_NAME == "main"
@@ -110,6 +111,7 @@ build_docker_image:
         - Dockerfile
         - tcs_garr/*
         - pyproject.toml
+    - if: $CI_COMMIT_TAG
 
 release:
   stage: release
