fix: ci pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,14 +31,35 @@ auto-bump-and-build:
     - git config http.sslVerify false
     - git remote rm origin && git remote add origin https://$CI_USERNAME:$PROJECT_ACCESS_TOKEN@$CI_SERVER_HOST/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME.git
     - git checkout -B "$CI_COMMIT_REF_NAME" "$CI_COMMIT_SHA"
+
+    # Get the previous tag
+    - PREVIOUS_TAG=$(git describe --tags --abbrev=0 || echo "0.0.0")
+    - |
+      echo "Previous tag: $PREVIOUS_TAG"
+
     - poetry run cz bump --yes || true # execute auto bump, continue even if no bump is necessary
     - git push -o ci.skip --tags origin $CI_COMMIT_BRANCH:$CI_COMMIT_BRANCH
+
+    # Get the new tag after bumping (if any)
+    - NEW_TAG=$(git describe --tags --abbrev=0 || echo "$PREVIOUS_TAG")
+    - |
+      echo "New tag: $NEW_TAG"
+
+    # Compare the previous tag and new tag, save NEW_TAG only if they are different
+    - |
+      if [[ "$NEW_TAG" != "$PREVIOUS_TAG" ]]; then
+        echo "New tag detected: $NEW_TAG"
+        echo "NEW_TAG=$NEW_TAG" > new_tag.env
+      fi
+
     - poetry build
   only:
     - main
   artifacts:
     paths:
       - dist/
+    reports:
+      dotenv: new_tag.env
 
 publish_gitlab:
   stage: publish
@@ -94,11 +115,11 @@ build_docker_image:
 
     # Build and push on tag creation
     - |
-      if [[ "$CI_COMMIT_TAG" != "" ]]; then
-        docker build --tag $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG -f ./Dockerfile .
-        docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG
+      if [[ -n "$NEW_TAG" ]]; then
+        docker build --tag $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$NEW_TAG -f ./Dockerfile .
+        docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$NEW_TAG
         docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest
-        echo "Pushed $CONTAINER_IMAGE_PATH/$IMAGE_NAME with tag: $TAG, latest."
+        echo "Pushed $CONTAINER_IMAGE_PATH/$IMAGE_NAME with tag: $NEW_TAG, latest."
       fi
   rules:
     - if: $CI_COMMIT_REF_NAME == "main"
@@ -111,18 +132,17 @@ build_docker_image:
         - Dockerfile
         - tcs_garr/*
         - pyproject.toml
-    - if: $CI_COMMIT_TAG
+    - if: "$NEW_TAG"
 
 release:
   stage: release
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   script:
-    - NEW_TAG=$(git describe --tags --abbrev=0)
     - echo "Running the release job for $NEW_TAG."
     - "awk '/^## Unreleased/ { next } ; /^## / { r++ ; if ( r <2) { print ; next } else { exit } }; /^/ { print } ;' < CHANGELOG.md >INCREMENTAL_CHANGELOG.md"
   release:
     tag_name: "v$NEW_TAG"
     name: "Release $NEW_TAG"
     description: INCREMENTAL_CHANGELOG.md
-  only:
-    - main
+  rules:
+    - if: "$NEW_TAG"
