--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,8 @@ image: harbor.infra.garr.it/cache/library/python:3.12
 
 stages:
   - lint
-  - auto-bump-and-build
+  - auto-bump
+  - build
   - publish
   - release
   - mr-wa
@@ -16,11 +17,9 @@ lint:
     - echo "Dependencies installed, building package..."
   script:
     - poetry run ruff format .
-  only:
-    - main
 
-auto-bump-and-build:
-  stage: auto-bump-and-build
+auto-bump:
+  stage: auto-bump
   before_script:
     - pip install poetry
     - poetry config virtualenvs.create false # Disable virtual environment creation and install dependencies in the system scope
@@ -32,34 +31,25 @@ auto-bump-and-build:
     - git remote rm origin && git remote add origin https://$CI_USERNAME:$PROJECT_ACCESS_TOKEN@$CI_SERVER_HOST/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME.git
     - git checkout -B "$CI_COMMIT_REF_NAME" "$CI_COMMIT_SHA"
 
-    # Get the previous tag
-    - PREVIOUS_TAG=$(git describe --tags --abbrev=0 || echo "0.0.0")
-    - |
-      echo "Previous tag: $PREVIOUS_TAG"
-
     - poetry run cz bump --yes || true # execute auto bump, continue even if no bump is necessary
-    - git push -o ci.skip --tags origin $CI_COMMIT_BRANCH:$CI_COMMIT_BRANCH
+    - git push --tags origin $CI_COMMIT_BRANCH:$CI_COMMIT_BRANCH
+  rules:
+    - if: '$GITLAB_USER_LOGIN != $CI_USERNAME && ($CI_PIPELINE_SOURCE == "push" || $CI_PIPELINE_SOURCE == "merge_request_event")'
 
-    # Get the new tag after bumping (if any)
-    - NEW_TAG=$(git describe --tags --abbrev=0 || echo "$PREVIOUS_TAG")
-    - |
-      echo "New tag: $NEW_TAG"
-
-    # Compare the previous tag and new tag, save NEW_TAG only if they are different
-    - |
-      if [[ "$NEW_TAG" != "$PREVIOUS_TAG" ]]; then
-        echo "New tag detected: $NEW_TAG"
-        echo "NEW_TAG=$NEW_TAG" > new_tag.env
-      fi
-
+build:
+  stage: build
+  before_script:
+    - pip install poetry
+    - poetry config virtualenvs.create false # Disable virtual environment creation and install dependencies in the system scope
+    - poetry install
+    - echo "Dependencies installed, building package..."
+  script:
     - poetry build
-  only:
-    - main
+  rules:
+    - if: $CI_COMMIT_TAG
   artifacts:
     paths:
       - dist/
-    reports:
-      dotenv: new_tag.env
 
 publish_gitlab:
   stage: publish
@@ -69,8 +59,8 @@ publish_gitlab:
     - echo "Publishing package to Gitlab"
     - TWINE_PASSWORD=${CI_JOB_TOKEN} TWINE_USERNAME=gitlab-ci-token python -m twine upload --repository-url ${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/pypi dist/*
     - echo "Publishing to GitLab done!"
-  only:
-    - main
+  rules:
+    - if: $CI_COMMIT_TAG
 
 do_nothing:
   stage: mr-wa
@@ -86,8 +76,8 @@ publish_pypi:
     - echo "Publishing package to PyPI"
     - TWINE_PASSWORD=${PYPI_TOKEN} TWINE_USERNAME=__token__ python -m twine upload dist/*
     - echo "Publishing to PyPI done!"
-  only:
-    - main
+  rules:
+    - if: $CI_COMMIT_TAG
 
 build_docker_image:
   stage: publish
@@ -115,11 +105,10 @@ build_docker_image:
 
     # Build and push on tag creation
     - |
-      if [[ -n "$NEW_TAG" ]]; then
-        docker build --tag $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$NEW_TAG -f ./Dockerfile .
-        docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$NEW_TAG
-        docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:latest
-        echo "Pushed $CONTAINER_IMAGE_PATH/$IMAGE_NAME with tag: $NEW_TAG, latest."
+      if [[ "$CI_COMMIT_TAG" != "" ]]; then
+        docker build --tag $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG -f ./Dockerfile .
+        docker push $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG
+        echo "Pushed $CONTAINER_IMAGE_PATH/$IMAGE_NAME:$TAG"
       fi
   rules:
     - if: $CI_COMMIT_REF_NAME == "main"
@@ -132,17 +121,17 @@ build_docker_image:
         - Dockerfile
         - tcs_garr/*
         - pyproject.toml
-    - if: "$NEW_TAG"
+    - if: $CI_COMMIT_TAG
 
 release:
   stage: release
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   script:
-    - echo "Running the release job for $NEW_TAG."
+    - echo "Running the release job for $CI_COMMIT_TAG."
     - "awk '/^## Unreleased/ { next } ; /^## / { r++ ; if ( r <2) { print ; next } else { exit } }; /^/ { print } ;' < CHANGELOG.md >INCREMENTAL_CHANGELOG.md"
   release:
-    tag_name: "v$NEW_TAG"
-    name: "Release $NEW_TAG"
+    tag_name: "v$CI_COMMIT_TAG"
+    name: "Release $CI_COMMIT_TAG"
     description: INCREMENTAL_CHANGELOG.md
   rules:
-    - if: "$NEW_TAG"
+    - if: $CI_COMMIT_TAG
