--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ auto-bump:
     - poetry install
     - echo "Dependencies installed, building package..."
   script:
+    - echo "Gitlab User Login is $GITLAB_USER_LOGIN - Gitlab CI Username is $CI_USERNAME"
     - git config user.email $CI_EMAIL && git config user.name $CI_USERNAME
     - git config http.sslVerify false
     - git remote rm origin && git remote add origin https://$CI_USERNAME:$PROJECT_ACCESS_TOKEN@$CI_SERVER_HOST/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME.git
