--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,13 @@ auto-bump:
     - git remote rm origin && git remote add origin https://$CI_USERNAME:$PROJECT_ACCESS_TOKEN@$CI_SERVER_HOST/$CI_PROJECT_NAMESPACE/$CI_PROJECT_NAME.git
     - git checkout -B "$CI_COMMIT_REF_NAME" "$CI_COMMIT_SHA"
 
-    - poetry run cz bump --yes || true # execute auto bump, continue even if no bump is necessary
+    # Bump versione per pre-release sui branch diversi da main
+    - |
+      if [[ "$CI_COMMIT_REF_NAME" != "main" ]]; then
+        poetry run cz bump --prerelease rc --yes || true
+      else
+        poetry run cz bump --yes || true
+      fi
     - git push --tags origin $CI_COMMIT_BRANCH:$CI_COMMIT_BRANCH
   rules:
     - if: '$GITLAB_USER_NAME != $CI_USERNAME && ($CI_PIPELINE_SOURCE == "push" || $CI_PIPELINE_SOURCE == "merge_request_event")'
@@ -68,6 +74,17 @@ do_nothing:
   rules:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
 
+publish_test_pypi:
+  stage: publish
+  script:
+    - pip install --upgrade pip
+    - pip install build twine
+    - echo "Publishing package to TestPyPI"
+    - TWINE_PASSWORD=${TEST_PYPI_TOKEN} TWINE_USERNAME=__token__ python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
+    - echo "Publishing to TestPyPI done!"
+  rules:
+    - if: '$CI_COMMIT_REF_NAME != "main" && $CI_COMMIT_TAG'
+
 publish_pypi:
   stage: publish
   script:
@@ -77,7 +94,7 @@ publish_pypi:
     - TWINE_PASSWORD=${PYPI_TOKEN} TWINE_USERNAME=__token__ python -m twine upload dist/*
     - echo "Publishing to PyPI done!"
   rules:
-    - if: $CI_COMMIT_TAG
+    - if: '$CI_COMMIT_REF_NAME == "main" && $CI_COMMIT_TAG'
 
 build_docker_image:
   stage: publish
@@ -134,4 +151,4 @@ release:
     name: "Release $CI_COMMIT_TAG"
     description: INCREMENTAL_CHANGELOG.md
   rules:
-    - if: $CI_COMMIT_TAG
+    - if: '$CI_COMMIT_REF_NAME == "main" && $CI_COMMIT_TAG'
