--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,7 +83,7 @@ publish_test_pypi:
     - TWINE_PASSWORD=${TEST_PYPI_TOKEN} TWINE_USERNAME=__token__ python -m twine upload --repository-url https://test.pypi.org/legacy/ dist/*
     - echo "Publishing to TestPyPI done!"
   rules:
-    - if: '$CI_COMMIT_REF_NAME != "main" && $CI_COMMIT_TAG'
+    - if: "$CI_COMMIT_TAG && $CI_COMMIT_TAG =~ /^.*-rc.*$/"
 
 publish_pypi:
   stage: publish
@@ -94,7 +94,7 @@ publish_pypi:
     - TWINE_PASSWORD=${PYPI_TOKEN} TWINE_USERNAME=__token__ python -m twine upload dist/*
     - echo "Publishing to PyPI done!"
   rules:
-    - if: '$CI_COMMIT_REF_NAME == "main" && $CI_COMMIT_TAG'
+    - if: "$CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^.*-rc.*$/"
 
 build_docker_image:
   stage: publish
