--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: Docker Image CI
 on:
   push:
     tags:
-      - "*.*.*"
+      - "[0-9]+.[0-9]+.[0-9]+"
   workflow_dispatch:
 
 jobs:
@@ -25,11 +25,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Get harica-cli version
-        run: |
-          export IMAGE_TAG=$(grep '^version =' pyproject.toml | sed -E 's/version = "(.*)"/\1/')
-          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -42,16 +37,17 @@ jobs:
         with:
           string: ${{ github.repository }}
 
-      - name: Build and push version
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/${{ steps.docker_image.outputs.lowercase }}:${{ env.IMAGE_TAG }}
-
       - name: Build and push latest
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           tags: ghcr.io/${{ steps.docker_image.outputs.lowercase }}:latest
+
+      - name: Build and push version only on tag creation
+        if: github.event_name != 'workflow_dispatch'
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ steps.docker_image.outputs.lowercase }}:${{ github.ref_name }}
