--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -53,3 +53,32 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ghcr.io/${{ steps.docker_image.outputs.lowercase }}:${{ github.ref_name }}
+
+      - name: Set tcs_tag to github.ref_name or latest tag
+        id: set_tag
+        run: |
+          if [ -n "${{ github.ref_name }}" ]; then
+            echo "Using github.ref_name: ${{ github.ref_name }}"
+            echo "tcs_tag=${{ github.ref_name }}" >> $GITHUB_ENV
+          else
+            echo "github.ref_name not set, using latest git tag"
+            git fetch --tags
+            latest_tag=$(git describe --tags `git rev-list --tags --max-count=1`)
+            echo "Latest tag is $latest_tag"
+            echo "tcs_tag=$latest_tag" >> $GITHUB_ENV
+
+      - name: Trigger auto-harica workflow
+        run: |
+          # Set the required variables
+          repo_owner="ConsortiumGARR"
+          repo_name="auto-harica"
+          event_type="trigger-workflow"
+          echo "Using tag: $tcs_tag"
+
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.PAT_AUTO_HARICA }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/$repo_owner/$repo_name/dispatches \
+            -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"tcs_tag\": \"$tcs_tag\", \"unit\": false, \"integration\": true}}"
